Fix heater indicator alignment

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -88,8 +88,9 @@ select {
 }
 
 #map-container #heater-indicator {
-  flex: 1;
+  flex: 0 0 auto;
   margin-left: auto;
+  margin-right: 20px;
 }
 
 #location-address {
